# QT_Car_Telltales_Cmake_Build

./: Agent_Pipeline.txt  CMakeLists.txt  Jenkins_Local_Config.txt  Jenkinsfile  LICENSE  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
.github/workflows/: Cmake_Build_Win_Local_Run_App.yml  cmake-multi-platform.yml
JenkinsConfig/: Jenkins_Config_Local.docx  Jenkins_Pipeline_Script.txt
Scripts/: Setup_Repo.bat
src/: main.cpp  mainwindow.cpp
xml/: 11inch.xml
